--- a/web/src/main/webapp/WEB-INF/view/page/blackListUsers.jspx
+++ b/web/src/main/webapp/WEB-INF/view/page/blackListUsers.jspx
@@ -5,8 +5,6 @@
           xmlns:c="http://java.sun.com/jsp/jstl/core"
           version="2.0">
 
-    <html>
-    <body>
     <c:if test="${blackListUsers !=null}">
         <h2 style="text-align: center"><spring:message code="button.blockedUsersList"/></h2>
 
@@ -14,6 +12,7 @@
             <tr>
                 <th>№</th>
                 <th><spring:message code="table.name"/></th>
+                <!--                <th><spring:message code="${error}"/></th>-->
                 <th><spring:message code="table.surname"/></th>
                 <th><spring:message code="table.dateBlock"/></th>
                 <th><spring:message code="table.removeBlackList"/></th>
@@ -42,14 +41,10 @@
         <h2><spring:message code="text.noBlackListUsers"/></h2>
     </c:if>
 
-
     <form action="${pageContext.request.contextPath}/toPersonalAreaJspx">
         <button name="GoToPersonalArea"><spring:message code="button.GoToPersonalArea"/></button>
     </form>
 
     <a href="${pageContext.request.contextPath}/logout"><spring:message code="button.logout"/></a> <br/>
-
-    </body>
-    </html>
 
 </jsp:root>
