--- a/web/src/main/webapp/WEB-INF/view/page/viewOrder.jspx
+++ b/web/src/main/webapp/WEB-INF/view/page/viewOrder.jspx
@@ -5,8 +5,7 @@
           xmlns:c="http://java.sun.com/jsp/jstl/core"
           version="2.0">
 
-    <html>
-    <body style="background-color: aliceblue">
+    <body style="background-color: aliceblue"/>
 
     <h4><spring:message code="label.userName"/>: ${client.firstName}</h4>
     <h1 style="text-align: center"><spring:message
@@ -51,8 +50,5 @@
     <br/>
     <br/>
     <a href="${pageContext.request.contextPath}/logout"><spring:message code="button.logout"/></a>
-
-    </body>
-    </html>
 
 </jsp:root>
